[package]
name = "ros"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
edition = "2018"

[package.metadata.cargo-xbuild]
sysroot_path = "target/sysroot"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
spin = "0.5.0"

[dev-dependencies]
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300
test-success-exit-code = 33         # (0x10 << 1) | 1
